Fix bugs run on MacOS